--- a/News/templates/artikulls_search.html
+++ b/News/templates/artikulls_search.html
@@ -6,7 +6,7 @@ News
 {% endblock title %}
 
 {% block content %}
-   <h1>поиск новостей</h1>
+   <h1>поиск статей</h1>
    <p><a href="/artikulls/">обратно ко всем статьям</a></p>
    <form action="" method="get">
        {{ filterset.form.as_p }}
