--- a/News/static/css/styles.css
+++ b/News/static/css/styles.css
@@ -89,6 +89,12 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.xxblue {
+  background-color: #0a58ca;
+}
+.xxwhite {background-color: #D9D9D9;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
@@ -11286,3 +11292,8 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+
+
+
+
+
