--- a/News/static/css/styles.css
+++ b/News/static/css/styles.css
@@ -89,10 +89,10 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-.xxblue {
+.blue {
   background-color: #0a58ca;
 }
-.xxwhite {background-color: #D9D9D9;
+.white {background-color: #D9D9D9;
 }
 
 hr {
