--- a/News/templates/posts.html
+++ b/News/templates/posts.html
@@ -22,7 +22,7 @@ News
                <th>Категория</th>
            </tr>
            {% for post in posts %}
-           <tr align="left" class="{% cycle 'xxblue' 'xxwhite' %}">
+           <tr align="left" class="{% cycle 'blue' 'white' %}">
                <td width="20%" >{{ post.head }}</td>
                <td width="10%">{{ post.datetime_in|date:'d.m.Y H:i' }}</td>
                <td width="25%">{{ post.tekst|truncatechars:21 }}</td>
