--- a/News/templates/posts.html
+++ b/News/templates/posts.html
@@ -6,7 +6,7 @@ News
 {% endblock title %}
 
 {% block content %}
-   <h1>{% trans "te gjitha lajmet" noop %}</h1>
+   <h1>{% trans "te gjitha lajmet" %}</h1>
    <p><a href="/news/search/">поиск новостёв</a></p>
    <hr>
    {% if posts %}
