--- a/News/templates/posts.html
+++ b/News/templates/posts.html
@@ -14,7 +14,7 @@ News
            <tr>
                <th>Заголовок</th>
                <th>Дата</th>
-               <th>Новость</th>
+               <th>{% trans "lajme" %}</th>
                <!-- <th>Рейтинг</th>-->
                <th>Автор</th>
                <th>изменить новость</th>
