--- a/News/templates/posts_search.html
+++ b/News/templates/posts_search.html
@@ -18,7 +18,7 @@ News
            <tr>
                <th>Заголовок</th>
                <th>Дата</th>
-               <th>Новость</th>
+               <th>lajme</th>
                <!-- <th>Рейтинг</th>-->
                <th>Автор</th>
                <!--<th>Категория</th>-->
